Current
Fixed: GITHUB-2396: @Ignore on method level doesn't work as expected (Krishnan Mahadevan)
Fixed: GITHUB-2382: TestNG version should be specified in MANIFEST.MF (Krishnan Mahadevan)
Fixed: GITHUB-2096: 7.0.0-beta6 memory issues (regression) (Krishnan Mahadevan)
Fixed: GITHUB-2355: TestNG creates multiple Guice Module Instances (Krishnan Mahadevan)
Fixed: GITHUB-2374: Add file name to the warning message (Krishnan Mahadevan)
Fixed: GITHUB-2321: -Dtestng.thread.affinity=true do not work when running multiple instance of test in parallel (Nan Liang)
Fixed: GITHUB-2363: JS error when switching theme (Krishnan Mahadevan)
Fixed: GITHUB-2361: No way to enforce @Test(singleThreaded = true) when test defined in base class (Krishnan Mahadevan)
Fixed: GITHUB-2343: Injectors are not reused when they share the same set of modules (Krishnan Mahadevan)
Fixed: GITHUB-2346: ITestResult attributes are null when retrieved by Listener onTestStart if test fails at BeforeMethod (Krishnan Mahadevan)
Fixed: GITHUB-2357: TestNG 7.3.0 transitive dependencies

7.3.0
Fixed: GITHUB-2328: Add ability to get test method for which configuration method was called (Krishnan Mahadevan)
Fixed: GITHUB-2327: Parameters not present on skipped Test (Eric Kubenka)
Fixed: GITHUB-2232: Null Pointer Exception in ConfigInvoker.setMethodInvocationFailure (Krishnan Mahadevan)
Fixed: GITHUB-2312: IAnnotationTransformer called multiple time Discrepancy between 6.x and 7.x (Krishnan Mahadevan)
New:   GITHUB-2315: TextReporter console output does not nicely print native array data parameters (James Sassano)
Fixed: GITHUB-2301: Add support for object-based reporter configurations (Scott Babcock)
New: Deprecate org.testng.ReporterConfig (Julien Herr)
Fixed: GITHUB-2300: Vulnerable Dependency: Please upgrade JCommander to 1.75 or above (Krishnan Mahadevan)
Fixed: GITHUB-2182: Removed exception catching as valid behaviour
Fixed: GITHUB-2273: Use SPI to load Guice modules (Bartosz Popiela)