@@ -1,0 +1,11 @@
+package org.testng.internal.misamples;
+
+public abstract class AbstractMoves implements IDance {
+
+  @Override
+  public void dance() {
+
+  }
+
+  public abstract void walk();
+}
