@@ -1,0 +1,8 @@
+package org.testng.internal.misamples;
+
+public interface IDance {
+
+  default void dance() {
+  }
+
+}
