@@ -1,0 +1,9 @@
+package org.testng.internal.misamples;
+
+public class JohnTravoltaMoves extends AbstractMoves {
+
+  @Override
+  public void walk() {
+
+  }
+}
