@@ -1,0 +1,9 @@
+package org.testng.internal.misamples;
+
+public class MickJagger implements IDance {
+
+  @Override
+  public void dance() {
+
+  }
+}
