@@ -1,0 +1,12 @@
+package org.testng.internal.misamples;
+
+public interface SuperHeroCapabilities {
+
+  default void yellSlogan() {
+  }
+
+  void fly();
+
+  void liftWeights();
+
+}
